# pg-bench-listen-notify

./: .gitignore  Cargo.toml  LICENSE  README.md  analyze_scaling.py  benchmark_all_versions.sh  benchmark_results.csv  listen_common.sql  listen_notify_common.sql  listen_notify_unique.sql  listen_unique.sql  listen_unlisten_common.sql  listen_unlisten_unique.sql  parse_pgbench_csv.py  performance_overview-v4.md  performance_overview.md  pgbench.sh  pgbench_results_combined.csv  plot.py  plot.sh  plot_candlestick.py  plot_pgbench.py  plot_pgbench.sh  plot_stats.py  replot.sh  requirements.txt  run_all_versions.sh  stats.csv
results-old/: listen_common-c-0001-j-0001-master-2.csv  listen_common-c-0001-j-0001-master-3.txt  listen_common-c-0001-j-0001-master-5.csv  listen_common-c-0001-j-0001-optimize_listen_notify-2.txt  listen_common-c-0001-j-0001-optimize_listen_notify-3.csv  listen_common-c-0001-j-0001-optimize_listen_notify-3.txt  listen_common-c-0001-j-0001-optimize_listen_notify-5.txt  listen_common-c-0001-j-0001-optimize_listen_notify_v2-2.csv  listen_common-c-0001-j-0001-optimize_listen_notify_v2-4.csv  listen_common-c-0001-j-0001-optimize_listen_notify_v2-5.csv  listen_common-c-0001-j-0001-optimize_listen_notify_v2-5.txt  listen_common-c-0002-j-0002-master-1.csv  listen_common-c-0002-j-0002-master-1.txt  listen_common-c-0002-j-0002-master-2.txt  listen_common-c-0002-j-0002-master-3.txt  listen_common-c-0002-j-0002-master-4.csv  listen_common-c-0002-j-0002-master-5.csv  listen_common-c-0002-j-0002-master-5.txt  listen_common-c-0002-j-0002-optimize_listen_notify-1.csv  (+1115 more)
(+3546 files in other folders)
